{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 23,
  "lineage": "af07ad5a-71fe-d99b-f15e-1951a590d5a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:security-group/sg-0e595e7b5fb692083",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allows EFA traffic, which is not matched by CIDR rules.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0e595e7b5fb692083",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow unmanaged nodes to communicate with control plane (all ports)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0294e63a74f07eacb"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allows EFA traffic, which is not matched by CIDR rules.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-cluster-sg-supply-demo-83512319",
            "name_prefix": "",
            "owner_id": "376218549913",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "eks-cluster-sg-supply-demo-83512319",
              "kubernetes.io/cluster/supply-demo": "owned"
            },
            "tags_all": {
              "Name": "eks-cluster-sg-supply-demo-83512319",
              "kubernetes.io/cluster/supply-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:security-group/sg-0ca7386e53bdc2596",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca7386e53bdc2596",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e595e7b5fb692083"
                ],
                "self": true,
                "to_port": 5432
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "376218549913",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:subnet/subnet-0e0c8cba55ec3d623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0c8cba55ec3d623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376218549913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksctl-supply-demo-cluster/SubnetPrivateUSEAST1B",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eksctl-supply-demo-cluster/SubnetPrivateUSEAST1B",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:subnet/subnet-012789db20735bdda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012789db20735bdda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376218549913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksctl-supply-demo-cluster/SubnetPrivateUSEAST1C",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eksctl-supply-demo-cluster/SubnetPrivateUSEAST1C",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:subnet/subnet-0c38319e2b7ca99c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c38319e2b7ca99c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376218549913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksctl-supply-demo-cluster/SubnetPublicUSEAST1B",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eksctl-supply-demo-cluster/SubnetPublicUSEAST1B",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:subnet/subnet-06bd62c586c229b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bd62c586c229b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376218549913",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eksctl-supply-demo-cluster/SubnetPublicUSEAST1C",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eksctl-supply-demo-cluster/SubnetPublicUSEAST1C",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02f6105bc654c3b1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:376218549913:vpc/vpc-02f6105bc654c3b1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06e60abb276c5c73d",
            "default_route_table_id": "rtb-0d7fce07bdfcd917d",
            "default_security_group_id": "sg-0ca7386e53bdc2596",
            "dhcp_options_id": "dopt-0c4560cb9d70840cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02f6105bc654c3b1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7fce07bdfcd917d",
            "owner_id": "376218549913",
            "tags": {
              "Name": "eksctl-supply-demo-cluster/VPC",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo"
            },
            "tags_all": {
              "Name": "eksctl-supply-demo-cluster/VPC",
              "alpha.eksctl.io/cluster-name": "supply-demo",
              "alpha.eksctl.io/cluster-oidc-enabled": "false",
              "alpha.eksctl.io/eksctl-version": "0.224.0",
              "eksctl.cluster.k8s.io/v1alpha1/cluster-name": "supply-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}